--- a/css/style.css
+++ b/css/style.css
@@ -2,22 +2,78 @@ body {
   margin: 0;
   font-family: fira sans, arial;
 }
-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 24px 48px;
-  max-width: 1200px;
-  margin: 0 auto;
-}
 ul {
+  margin: 0px;
+  padding: 0px;
   list-style: none;
-  display: flex;
-  gap: 50px;
 }
 a {
   text-decoration: none;
-  color: #000;
-  font-weight: 700;
-  font-size: 1.2rem;
+}
+.header-bg {
+  background: #000;
+}
+.header {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.header-menu {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+}
+.header-menu a {
+  display: inline-block;
+  padding: 16px 0;
+  color: #fff;
+  font-size: 1.125rem;
+  position: relative;
+}
+.header-menu a::after {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 0px;
+  background-color: #fff;
+  margin-top: 4px;
+  transition: 0.3s;
+  position: absolute;
+}
+.header-menu a:hover::after {
+  width: 100%;
+}
+@media (max-width: 800px) {
+  .header-menu {
+    gap: 20px;
+  }
+  .header-menu a {
+    background: #111;
+    padding: 12px 16px;
+    border-radius: 4px;
+  }
+  .header-menu a:hover {
+    background-color: #2e2e2e;
+  }
+  .header-menu a::after {
+    display: none;
+  }
+}
+@media (max-width: 600px) {
+  .header {
+    justify-content: center;
+  }
+  .header-menu {
+    gap: 10px;
+  }
+  .header-menu a {
+    padding: 8px 12px;
+    font-size: 14px;
+  }
 }
