--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
 body {
   margin: 0;
   font-family: fira sans, arial;
+  height: 2000px;
 }
+h1,
+p,
 ul {
   margin: 0px;
+}
+ul {
   padding: 0px;
   list-style: none;
 }
@@ -49,6 +54,7 @@ a {
 .header-menu a:hover::after {
   width: 100%;
 }
+
 @media (max-width: 800px) {
   .header-menu {
     gap: 20px;
@@ -76,4 +82,61 @@ a {
     padding: 8px 12px;
     font-size: 14px;
   }
+}
+
+.introducao-bg {
+  background-color: #000;
+  box-shadow: inset 0 -120px white;
+}
+.introducao {
+  display: grid;
+  gap: 0 40px;
+  grid-template-columns: 1fr 1fr;
+  max-width: 1200px;
+  box-sizing: border-box;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0 auto;
+  color: #fff;
+}
+
+.introducao img {
+  width: 100%;
+  display: block;
+  object-fit: cover;
+  height: 100%;
+  border-radius: 4px;
+}
+.introducao-conteudo {
+  align-self: end;
+  padding-bottom: 200px;
+}
+.introducao-conteudo h1 {
+  margin-bottom: 32px;
+  font-size: 64px;
+  line-height: 1.125;
+}
+.introducao-conteudo h1 span {
+  color: #ffbb00;
+}
+.introducao-conteudo p {
+  margin-bottom: 20px;
+  font-size: 24px;
+  line-height: 1.5;
+  color: #b2b2b2;
+}
+.introducao-conteudo a {
+  display: inline-block;
+  padding: 16px 32px;
+  background: linear-gradient(#ffbf00, #f2a50c);
+  border-radius: 4px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  text-transform: uppercase;
+  color: #332200;
+  font-size: 1.125rem;
+  line-height: 1.33;
+  font-weight: bold;
+}
+.introducao-conteudo a:hover {
+  background: linear-gradient(#ffb60d, #e59317);
 }
