--- a/css/style.css
+++ b/css/style.css
@@ -140,3 +140,40 @@ a {
 .introducao-conteudo a:hover {
   background: linear-gradient(#ffb60d, #e59317);
 }
+
+@media (max-width: 600px) {
+  .introducao-conteudo a {
+    padding: 12px 16px;
+    font-size: 1rem;
+  }
+}
+@media (max-width: 1200px) {
+  .introducao-conteudo h1 {
+    font-size: 48px;
+  }
+  .introducao-conteudo p {
+    font-size: 18px;
+  }
+}
+@media (max-width: 800px) {
+  .introducao-bg {
+    background: #111;
+    padding-top: 40px;
+    box-shadow: inset 0 -60px #fff;
+  }
+  .introducao {
+    grid-template-columns: 1fr;
+    gap: 32px;
+  }
+  .introducao-conteudo {
+    padding-bottom: 0px;
+  }
+  .introducao-conteudo h1 {
+    font-size: 32px;
+    margin-bottom: 16px;
+  }
+  .introducao img {
+    height: 300px;
+    width: 100%;
+  }
+}
