--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -1,5 +1,5 @@
 .introducao-bg {
-  background-color: #000;
+  background-color: var(--cor-12);
   box-shadow: inset 0 -120px white;
 }
 .introducao {
@@ -11,7 +11,6 @@
   padding-left: 20px;
   padding-right: 20px;
   margin: 0 auto;
-  color: #fff;
 }
 
 .introducao img {
@@ -27,36 +26,17 @@
 }
 .introducao-conteudo h1 {
   margin-bottom: 32px;
-  font-size: 64px;
-  line-height: 1.125;
-  font-family: "Poppins";
-  font-weight: 600;
-}
-.introducao-conteudo h1 span {
-  color: #ffbb00;
-}
-.introducao-conteudo p {
-  margin-bottom: 20px;
-  font-size: 24px;
-  line-height: 1.5;
-  color: #b2b2b2;
-  font-family: "Roboto";
-  font-weight: 400;
 }
 
-@media (max-width: 1200px) {
-  .introducao-conteudo h1 {
-    font-size: 48px;
-  }
-  .introducao-conteudo p {
-    font-size: 18px;
-  }
+.introducao-conteudo p {
+  margin-bottom: 20px;
 }
+
 @media (max-width: 800px) {
   .introducao-bg {
-    background: #111;
+    background: var(--cor-11);
     padding-top: 40px;
-    box-shadow: inset 0 -60px #fff;
+    box-shadow: inset 0 -60px var(--cor-0);
   }
   .introducao {
     grid-template-columns: 1fr;
@@ -66,7 +46,6 @@
     padding-bottom: 0px;
   }
   .introducao-conteudo h1 {
-    font-size: 32px;
     margin-bottom: 16px;
   }
   .introducao img {
