--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
 @import "./global/global.css";
+@import "./utilidades/tipografia.css";
+@import "./utilidades/cores.css";
+
 @import "./global/header.css";
+
 @import "./utilidades/componentes.css";
+
 @import "./home/introducao.css";
