--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
 
 @import "./global/header.css";
 
+/* Utilidades */
 @import "./utilidades/componentes.css";
 
+/* Home */
 @import "./home/introducao.css";
+
+/* Bicicletas */
+@import "./global/bicicletas/bicicletas-lista.css";
