--- a/css/global/global.css
+++ b/css/global/global.css
@@ -4,6 +4,9 @@ body {
   color: #111111;
 }
 h1,
+h2,
+h3,
+h4,
 p,
 ul {
   margin: 0px;
@@ -14,4 +17,13 @@ ul {
 }
 a {
   text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+img[src$=".jpg"] {
+  border-radius: 4px;
 }
